# liama-toolkit

./: .gitignore  README.md  ReadAlt.py  ReadPro.py  pyproject.toml  requirements.txt  run.py  spectra_viewer.py
ftir_toolkit/: __init__.py  config.py  logging_setup.py  pyproject.toml
ftir_toolkit/cli/: ftirtk.py
ftir_toolkit/core/: files_io.py  peaks.py  processing.py
ftir_toolkit/gui/: app.py
ftir_toolkit/viz/: plotting.py
src/liama/: __init__.py  main.py  mainwindow.py
src/liama/core/: __init__.py  multivariate.py  peak_detection.py  processing.py  spa_reader.py  spectrum.py
src/liama/utils/: __init__.py  colors.py  theme.py
src/liama/widgets/: __init__.py  annotations_tab.py  canvas_widget.py  export_tab.py  metadata_dialog.py  multivariate_panel.py  processing_tab.py  range_slider.py  spectrum_list.py  vista_tab.py
tests/: test_processing.py  test_spectra_viewer.py  tests_peaks.py
