[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "liama-toolkit"
version = "2.0.0"
description = "LIAMA Toolkit — FTIR-ATR spectral analysis for lichen geobiology research"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "spectrochempy>=0.8.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.gui-scripts]
liama = "liama.main:main"

[tool.setuptools.packages.find]
where = ["src"]
