[project]
name = "ftir_toolkit"
version = "0.1.0"
description = "Modular FTIR-ATR toolkit for lichen spectra analysis"
authors = ["udaeta-sp"]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "scipy>=1.11",
  "spectrochempy>=0.8.1"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
